Standardize Enterprise admonition

--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -223,7 +223,7 @@ Additionally, the router provides essential GraphOS functionality beyond support
 
 **To create a _non_-cloud graph** (a self-hosted supergraph or a monograph), follow these steps:
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 1. Go to your organization's **Graphs** tab in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 
