--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -4,7 +4,7 @@ subtitle: Configure default reviewers, approval requirements, and more
 description: Fine-tune the GraphQL schema proposal process by configuring permissions, default reviewers, approval requirements, and schema checks with GraphOS.
 ---
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 [Org and graph admins](../org/members/#organization-wide-member-roles) can configure the following aspects of schema proposals:
 
