--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -4,7 +4,7 @@ subtitle: Review and provide feedback on proposed schema changes in GraphOS
 description: Review and provide feedback on GraphQL schema proposals in GraphOS Studio. Explore changes, add comments, and approve proposals.
 ---
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 This article describes actions in the **Proposal review** stage of the [schema proposal process](./schema-proposals#proposal-process).
 
