--- a/src/content/graphos/delivery/schema-proposals.mdx
+++ b/src/content/graphos/delivery/schema-proposals.mdx
@@ -4,7 +4,7 @@ subtitle: Propose, review, and track changes to new and published schemas
 description: Use GraphOS's native GraphQL schema management process propose, review, and track schema changes before and after publication.
 ---
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 As your supergraph schema grows in complexity, changing it can become increasingly difficult.
 The ramifications of subgraph schema changes on [composition](/federation/federated-types/composition/) and client operations become harder to assess before publication.
