--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -4,7 +4,7 @@ subtitle: Edit schemas, lint and check changes, and request reviews in GraphOS
 description: Propose GraphQL schema changes in GraphOS Studio. Edit and lint schemas, save and check revisions, and request reviews for async collaboration.
 ---
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 This article describes actions in the **Proposal creation** stage of the [schema proposal process](./schema-proposals#proposal-process).
 
