--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -98,7 +98,7 @@ Learn more about [schema checks](../delivery/schema-checks).
 
 ### Schema proposals permissions
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 The table below shows _default_ schema proposal settings. You can [configure which roles can create, edit, and approve proposals](../delivery/configure-proposals#configure-permissions-and-approvals).
 
@@ -114,7 +114,7 @@ The table below shows _default_ schema proposal settings. You can [configure whi
 
 ### Contract permissions
 
-<GraphOSEnterpriseRequired />
+<EnterpriseFeature />
 
 Learn more about [contracts](../delivery/contracts/).
 
