Simplify schema proposals overview

--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -39,7 +39,7 @@ Contracts are only available with a [GraphOS Enterprise plan](https://www.apollo
 
 </EnterpriseFeature>
 
-GraphOS [**contracts**](./contracts) let you deliver _different_ subsets of your supergraph to different consumers. Contracts rely on `@tags` across subgraph schemas to denote which types and fields are accessible to different consumers.
+GraphOS [**contracts**](./contracts) let you deliver different subsets of your supergraph to different consumers. Contracts rely on [`@tags`](./contract-setup#1-add-tags-to-subgraph-schemas) in subgraph schemas to denote which types and fields are accessible to different consumers.
 
 ## Client operation validation
 
