--- a/src/content/graphos/delivery/schema-proposals.mdx
+++ b/src/content/graphos/delivery/schema-proposals.mdx
@@ -6,41 +6,43 @@ description: Use GraphOS's native GraphQL schema management process propose, rev
 
 <EnterpriseFeature />
 
-As your supergraph schema grows in complexity, changing it can become increasingly difficult.
-The ramifications of subgraph schema changes on [composition](/federation/federated-types/composition/) and client operations become harder to assess before publication.
-Even after schema design changes are agreed upon, ensuring that the design changes are implemented during subgraph development is another challenge.
+As your supergraph schema grows, managing changes becomes increasingly challenging.
+Assessing the impact of subgraph schema changes on [composition](/federation/federated-types/composition/) and client operations becomes harder.
+After agreeing on schema design changes, ensuring their implementation during subgraph development poses another challenge.
 
-These challenges multiply when updating multiple subgraph schemas simultaneously, and working between the [multiple roles within orgs and teams](../org/members/#organization-wide-member-roles).
+These challenges intensify when updating multiple subgraph schemas simultaneously and collaborating across teams.
 Schema development can stall without the clear cross-team communication needed to understand, verify, and track changes.
 
 ## Schema proposals for schema change management
 
-**Schema proposals** in GraphOS provide centralized schema change management of your supergraph to all roles in your org.
+GraphOS **schema proposals** provide centralized schema change management.
 The centralized proposal process fosters collaboration and strengthens schema governance:
 
-- Subgraph developers can propose changes in the context of the supergraph and use automated checks and reviewer feedback to validate them.
+- Subgraph developers can propose changes in the context of the supergraph using automated checks and reviewer feedback for validation.
 - Graph consumers can actively participate by commenting on, reviewing, and approving proposals.
-- Graph owners and governance teams can use proposals to set standards and ensure that only approved changes are published.
+- Graph owners and governance teams can use proposals to set standards and ensure only approved changes are published.
 
-This increased coordination improves design decisions and accountability, making development cycles more efficient.
+This increased coordination improves design decisions and accountability, streamlining development cycles.
 
 ## Benefits of native schema change management
 
 Managing schema changes _directly in GraphOS Studio_ provides the following benefits:
 
-- The proposal process **leverages GraphOS [schema checks](./schema-checks)&mdash;including [schema linting](./schema-linter)&mdash;at every step**.
-  - This provides an immediate understanding of the changes' impacts on composition and client operations.
+- The proposal process **uses GraphOS [schema checks](./schema-checks)&mdash;including [schema linting](./schema-linter)&mdash;at every step**.
+  - This offers an immediate understanding of the changes' impacts on composition and client operations.
   - It also minimizes the likelihood of errors and inconsistencies.
 - Editing, reviewing, and approving changes in GraphOS allows for **GraphQL-aware schema diffing**.
-  - For example, if you add new fields and types in the GraphOS [proposals editor](#edit-subgraph-schemas), GraphOS diffs those additions as new fields and types, regardless of how they are formatted.
-  - GraphQL-naive text diffing won't understand and diff changes if they aren't conventionally formatted.
+  - For example, GraphOS diffs additions of new fields and types in the [proposals editor](#edit-subgraph-schemas) as new fields and types, regardless of formatting.
+  - In contrast, GraphQL-naive text diffing may not understand and diff changes unless they're conventionally formatted.
 - Centralizing the schema change process **consolidates a comprehensive audit trail** of discussions and schema changes.
 
 ## How schema proposals work
 
-Schema proposals are [created](./propose-changes), [reviewed](./review-proposals), and [approved](./review-proposals#approved-reviews) in GraphOS Studio. After approval, the proposal is implemented &mdash;including resolver and any other supporting code changes&mdash; before being published back to GraphOS. You can [configure schema checks](./schema-checks/#proposals-checks) to ensure your organization only publishes changes that are part of an approved proposal.
+Team members [create](./propose-changes), [review](./review-proposals), and [approval](./review-proposals#approved-reviews) schema proposals in GraphOS Studio. After approval, the team implements the proposal&mdash;including resolver and any supporting code changes&mdash; before publishing the schema changes to GraphOS.
 
-Before describing the details of this proposal process, it's helpful to understand proposal statuses.
+[Org and graph admins](../org/members/#organization-wide-member-roles) can [configure schema checks](./schema-checks/#proposals-checks) to ensure an organization only publishes changes approved through a proposal.
+
+Before diving into proposal process details, understanding proposal statuses is helpful.
 
 ### Proposal statuses
 
@@ -86,7 +88,7 @@ Default status upon creation until the proposal is ready for review.
 </td>
 <td>Automatic</td>
 <td>
-The{' '}
+Signals the{' '}
 <a href="./configure-proposals#required-approvals">
 minimum number of reviewers
 </a>{' '}
@@ -103,10 +105,10 @@ has approved the proposal.
 </td>
 <td>Automatic</td>
 <td>
-All the proposal's changes have been{' '}
+Signals all the proposal's changes have been{' '}
 <a href="./publishing-schemas">published</a>. <br />
-<br /> - Implemented proposals cannot receive further revisions. <br /> -
-Their status cannot be updated.
+<br /> - Implemented proposals can't receive further revisions. <br /> -
+Their status can't be updated.
 </td>
 </tr>
 <tr>
@@ -118,14 +120,14 @@ Their status cannot be updated.
 <td><a href="./propose-changes#change-proposal-status">Manual</a></td>
 <td>
 Signals the proposal is suspended or abandoned. <br />
-<br /> - Closed proposals cannot receive further revisions. <br /> - You
+<br /> - Closed proposals can't receive further revisions. <br /> - You
 can reopen a proposal by setting the status to <strong> Draft</strong> or <strong>Open for feedback</strong>.
 </td>
 </tr>
 </tbody>
 </table>
 
-A proposal doesn't have to progress linearly from **Draft** to **Implemented**. It may be **Closed** before returning to **Draft** and continuing through the process.
+A proposal doesn't have to progress linearly from **Draft** to **Implemented**. For example, it may be **Closed** before returning to **Draft** and continuing through the process.
 
 ### Proposal process
 
@@ -154,12 +156,10 @@ graph TB
 
 ## Next steps
 
-Schema proposal default configurations let you start using them out of the box. If you want to finetune your graph's proposal process, including permissions, approval requirements, and more, check out [Configure proposals](./configure-proposals).
+Schema proposal default configurations let you start using proposals out of the box. If you want to fine-tune your graph's proposal process, check out [Configure proposals](./configure-proposals). Configurations include permissions, approval requirements, and more.
 
 To learn more about each stage in the process, refer to the following articles:
 
 - [Propose changes](./propose-changes)
 - [Review proposals](./review-proposals)
 - [Implement proposals](./implement-proposals) (covers both implementation and publication)
-
-
