Simplify configuration page

--- a/src/content/graphos/delivery/schema-proposals.mdx
+++ b/src/content/graphos/delivery/schema-proposals.mdx
@@ -1,5 +1,5 @@
 ---
-title: Schema proposals
+title: Schema proposals overview
 subtitle: Propose, review, and track changes to new and published schemas
 description: Use GraphOS's native GraphQL schema management process propose, review, and track schema changes before and after publication.
 ---
