--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -6,17 +6,17 @@ description: Fine-tune the GraphQL schema proposal process by configuring permis
 
 <EnterpriseFeature />
 
-[Org and graph admins](../org/members/#organization-wide-member-roles) can configure the following aspects of schema proposals:
+[Org and graph admins](../org/members/#organization-wide-member-roles) can configure various aspects of schema proposals:
 
 - Which [roles can create and edit proposals](#configure-permissions-and-approvals)
 - Which team members are [default reviewers](#default-reviewers) and whether [default reviewer approval is required](#require-default-reviewer-approval)
-- The [minimum number of approvals](#required-approvals) required for a proposal to achieve [**Approved** status](./schema-proposals#proposal-statuses)
+- The [minimum number of approvals](#required-approvals) needed for a proposal to achieve [**Approved** status](./schema-proposals#proposal-statuses)
 - Whether and how [schema checks incorporate proposals](#configure-schema-checks)
-- [Coming soon] Whether to [mute email notifications](#mute-notifications) from proposal activty
+- Whether to [turn off email notifications](#turn-off-notifications) of proposal activity
 
 <Note>
 
-Schema proposal configurations are on a **per-graph** basis&mdash;not per-organization or per-proposal. This includes [muting notifications](#mute-notifications), which are on a per-teammate, per-graph basis.
+Schema proposal configurations are on a **per-graph** basis&mdash;not per-organization or per-proposal. This includes [turning off notifications](#turn-off-notifications), which are on a per-graph, per-teammate basis.
 
 </Note>
 
@@ -34,7 +34,7 @@ Schema proposal configurations are on a **per-graph** basis&mdash;not per-organi
 | Make comments          |     ✓     |      ✓      |      ✓      |           ✓           |    ✓     |
 | Approve proposals      |     ✓     |      ✓      |      ✓      |           ✓           |    ✓     |
 
-[Org and graph admins](../org/members/#organization-wide-member-roles) can configure which roles can create, edit, and approve proposals. Permissions for other proposal actions are not configurable.
+[Org and graph admins](../org/members/#organization-wide-member-roles) can configure which roles can create, edit, and approve proposals. Permissions for other proposal actions aren't configurable.
 
 Permissions and other configurations are available on a graph's **Settings** page in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
 
@@ -54,7 +54,7 @@ Refer to the [configuration reference table](#configuration-reference) below for
 <table class="field-table">
   <thead>
     <tr>
-      <th style="min-width: 175px">Configuration/ <br/> Default value</th>
+      <th style="min-width: 200px">Configuration/ <br/> Default value</th>
       <th>Description</th>
       <th>Valid values</th>
     </tr>
@@ -70,15 +70,15 @@ Refer to the [configuration reference table](#configuration-reference) below for
 
 Defaults:
 
-Create: `Observers`
+- Create: `Observers`
 
-Edit: `Admins`
+- Edit: `Admins`
 
 </td>
 
 <td>
 
-The _minimum_ [roles](../org/members/#organization-wide-member-roles) required to create or edit proposals.
+The _minimum_ [role](../org/members/#organization-wide-member-roles) required to create or edit proposals.
 
 <br/>
 
@@ -147,7 +147,7 @@ The minimum number of approvals a proposal must receive for its status to become
 
 <Note>
 
-Changing the number of required approvals updates the status of existing proposals that aren't [**Closed** or **Implemented**](./propose-changes#change-proposal-status) based on whether their current number of approvals meets the new number of required approvals.
+Changing the number of required approvals may update the status of existing proposals that aren't [**Closed** or **Implemented**](./propose-changes#change-proposal-status). This depends on whether the current number of approvals meets the new number of required approvals. For example, a previously **Approved** proposal may become **Open for feedback** if it no longer meets the number of required approvals.
 
 </Note>
 
@@ -174,14 +174,14 @@ You can configure [schema checks](./schema-checks) to include a **Proposals** ta
 
 By default, the severity of this task is **Off**. You can select from the following severity levels:
 
-- With the severity set to **Off**, the proposals task isn't part of the checks that changes must pass for the check to succeed.
+- (Default) With the severity set to **Off**, the proposals task isn't part of the checks that changes must pass for the check to succeed.
 - Setting the severity to **Error** means the proposals task fails when the change being checked isn't included in approved proposals.
 - Setting the severity to **Warning** means the proposals tasks can still pass even when the change being checked isn't included in approved proposals. However, warnings appear in the check run.
 
 Integrating the Proposals task into schema checks strengthens schema governance when [publishing changes](./schema-proposals#proposal-process).
 See the [Implement approved proposals](./implement-proposals) article for more information on how to use schema checks as part of your proposal process.
 
-## Mute notifications
+## Turn off notifications
 
 By default, all team members receive email notifications for the following:
 
@@ -199,26 +199,26 @@ Additionally, the following roles receive email notifications for the following 
 
 <Note>
 
-\*\*Commenters only receive notifications for new comments on threads that they commented on. They don't receive notifications for all new comments on a proposal.
+\*\*Commenters only receive notifications for new comments on threads that they've commented on. They don't receive notifications for all new comments on a proposal.
 
 </Note>
 
 Notifications are cumulative. For example, if you comment on a particular thread and review a proposal, you get notifications for both new comments on the thread and saved revisions.
 
-Notifications are enabled by default. To mute your notifications, go to a proposal's Overiew page and click the bell icon.
+Notifications are enabled by default. To turn off your notifications, go to a proposal's overview page and click the bell icon.
 
 
 <img
-  src="../img/schema-proposals/mute-notifications.jpg"
+  src="../img/schema-proposals/turn-off-notifications.jpg"
   className="screenshot"
   alt="Proposals overview page in Studio"
   width="600"
 />
 
-A modal appears where you can select to mute your notifications. To re-enable them, click the same bell icon.
+A modal appears where you can select to turn off your notifications. To re-enable them, click the same bell icon.
 
 <Note>
 
-Notifications are enabled or muted on a per-team member, per-graph basis. 
+Notifications are enabled on a per-team member, per-graph basis. 
 
 </Note>
