Simplify propose changes

--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -215,7 +215,7 @@ Notifications are enabled by default. To turn off your notifications, go to a pr
   width="600"
 />
 
-A modal appears where you can select to turn off your notifications. To re-enable them, click the same bell icon.
+A dialog appears where you can select to turn off your notifications. To re-enable them, click the same bell icon.
 
 <Note>
 
