--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -98,7 +98,7 @@ Once you've reviewed a proposal, click the **Add review** button on the top righ
   alt="Schema proposals overview tab in Studio"
 />
 
-A modal appears where you can leave general commentary on the proposal and select to approve the proposal or not.
+A dialog appears where you can leave general commentary on the proposal and select to approve the proposal or not.
 
 <img
   src="../img/schema-proposals/add-review-modal.jpg"
