--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -40,15 +40,15 @@ A proposal's **Changes** tab shows both a **Summary** and **Detailed view** of t
   width="700"
 />
 
-- The **Summary** shows the number of objects, interfaces, and other types that were changed in the proposal. Each type shows the number of lines there were added, deleted, and modified.
+- The **Summary** shows the number of objects, interfaces, and other types that changed in the proposal. Each type shows the number of lines added, deleted, and modified.
 
 - The **Detailed view** shows a collapsible diff for each changed type.
 
-You can use the left nav to view changes from a particular subgraph, or see the changes in the context of the composed [supergraph schema](/federation/federated-types/overview/#supergraph-schema) or [resulting API schema](/federation/federated-types/overview/#api-schema).
+You can use the left nav to view changes for a particular subgraph, or see the changes in the context of the composed [supergraph schema](/federation/federated-types/overview/#supergraph-schema) or [resulting API schema](/federation/federated-types/overview/#api-schema).
 
 #### Add comments
 
-You can comment on any line in the detailed view's diff. Hover over the line and click on the chat icon that appears.
+You can comment on any line in the detailed view's diff. Hover over the line and click the chat icon that appears.
 
 <img
   src="../img/schema-proposals/add-comment.jpg"
@@ -98,7 +98,7 @@ Once you've reviewed a proposal, click the **Add review** button on the top righ
   alt="Schema proposals overview tab in Studio"
 />
 
-A dialog appears where you can leave general commentary on the proposal and select to approve the proposal or not.
+A dialog appears where you can leave general commentary on the proposal and select to approve the proposal.
 
 <img
   src="../img/schema-proposals/add-review-modal.jpg"
