Add preview notice

--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -6,6 +6,12 @@ description: Fine-tune the GraphQL schema proposal process by configuring permis
 
 <EnterpriseFeature />
 
+<PreviewFeature>
+
+Schema proposals are currently in invite-only [preview](/resources/product-launch-stages/#preview). Get in touch with your account team if you'd like to request access or have any questions or feedback.
+
+</PreviewFeature>
+
 [Org and graph admins](../org/members/#organization-wide-member-roles) can configure various aspects of schema proposals:
 
 - Which [roles can create and edit proposals](#configure-permissions-and-approvals)
