--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -6,6 +6,12 @@ description: Propose GraphQL schema changes in GraphOS Studio. Edit and lint sch
 
 <EnterpriseFeature />
 
+<PreviewFeature>
+
+Schema proposals are currently in invite-only [preview](/resources/product-launch-stages/#preview). Get in touch with your account team if you'd like to request access or have any questions or feedback.
+
+</PreviewFeature>
+
 This article describes actions in the **Proposal creation** stage of the [schema proposal process](./schema-proposals#proposal-process).
 
 <SchemaProposalCreationMermaid />
