--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -6,6 +6,12 @@ description: Review and provide feedback on GraphQL schema proposals in GraphOS 
 
 <EnterpriseFeature />
 
+<PreviewFeature>
+
+Schema proposals are currently in invite-only [preview](/resources/product-launch-stages/#preview). Get in touch with your account team if you'd like to request access or have any questions or feedback.
+
+</PreviewFeature>
+
 This article describes actions in the **Proposal review** stage of the [schema proposal process](./schema-proposals#proposal-process).
 
 <SchemaProposalReviewMermaid />
