--- a/src/content/graphos/delivery/schema-proposals.mdx
+++ b/src/content/graphos/delivery/schema-proposals.mdx
@@ -6,6 +6,12 @@ description: Use GraphOS's native GraphQL schema management process propose, rev
 
 <EnterpriseFeature />
 
+<PreviewFeature>
+
+Schema proposals are currently in invite-only [preview](/resources/product-launch-stages/#preview). Get in touch with your account team if you'd like to request access or have any questions or feedback.
+
+</PreviewFeature>
+
 As your supergraph schema grows, managing changes becomes increasingly challenging.
 Assessing the impact of subgraph schema changes on [composition](/federation/federated-types/composition/) and client operations becomes harder.
 After agreeing on schema design changes, ensuring their implementation during subgraph development poses another challenge.
