--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -34,7 +34,7 @@ GraphOS can perform the following types of schema checks:
 Most of this article covers composition and operation checks.
 
 - For details on linter checks, see [Schema linting](./schema-linter/).
-- For details on proposals checks, see [Schema proposals check configuration](./configure-proposals#configure-schema-checks).
+- For details on proposals checks, see [Schema proposals check configuration](./schema-proposals/configuration#configure-schema-checks).
 - For details on contract checks, see [Contracts](./contracts/).
 
 ## Prerequisites
