--- a/src/content/graphos/delivery/schema-proposals/configuration.mdx
+++ b/src/content/graphos/delivery/schema-proposals/configuration.mdx
@@ -153,7 +153,7 @@ The minimum number of approvals a proposal must receive for its status to become
 
 <Note>
 
-Changing the number of required approvals may update the status of existing proposals that aren't [**Closed** or **Implemented**](./propose-changes#change-proposal-status). This depends on whether the current number of approvals meets the new number of required approvals. For example, a previously **Approved** proposal may become **Open for feedback** if it no longer meets the number of required approvals.
+Changing the number of required approvals may update the status of existing proposals that aren't [**Closed** or **Implemented**](./creation#change-proposal-status). This depends on whether the current number of approvals meets the new number of required approvals. For example, a previously **Approved** proposal may become **Open for feedback** if it no longer meets the number of required approvals.
 
 </Note>
 
@@ -185,7 +185,7 @@ By default, the severity of this task is **Off**. You can select from the follow
 - Setting the severity to **Warning** means the proposals tasks can still pass even when the change being checked isn't included in approved proposals. However, warnings appear in the check run.
 
 Integrating the Proposals task into schema checks strengthens schema governance when [publishing changes](./schema-proposals#proposal-process).
-See the [Implement approved proposals](./implement-proposals) article for more information on how to use schema checks as part of your proposal process.
+See the [Implement approved proposals](./implementation) article for more information on how to use schema checks as part of your proposal process.
 
 ## Turn off notifications
 
