--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -43,7 +43,7 @@ Follow the steps below to create a new proposal:
 
    <Note>
 
-   If you want to edit the proposal's title later, you can do so from its [**Overview** tab](./review-proposals/#overview).
+   If you want to edit the proposal's title later, you can do so from its [**Overview** tab](../review/#overview).
 
    </Note>
 
@@ -61,7 +61,7 @@ Follow the steps below to create a new proposal:
 
     <Note>
 
-    If you want to edit the proposal's README later, you can do so from its [**Overview** tab](./review-proposals/#overview).
+    If you want to edit the proposal's README later, you can do so from its [**Overview** tab](../review/#overview).
 
     </Note>
 
@@ -169,7 +169,7 @@ For example, if the source variant schema includes a new type, unless the propos
 
 ## Self-review and commentary
 
-While working on a proposal and before requesting reviews from teammates, you may want to review the proposal yourself. See the [Review proposals](./review-proposals) article for how to review different aspects of a proposal and [provide commentary](./review-proposals/#add-comments) on it.
+While working on a proposal and before requesting reviews from teammates, you may want to review the proposal yourself. See the [Review proposals](../review) article for how to review different aspects of a proposal and [provide commentary](../review/#add-comments) on it.
 
 ## Change proposal status
 
