--- a/src/content/graphos/delivery/schema-proposals/review.mdx
+++ b/src/content/graphos/delivery/schema-proposals/review.mdx
@@ -26,14 +26,14 @@ Proposal creators and reviewers can review different aspects of a proposal from 
   alt="Schema proposals overview in Studio"
 />
 
-- A proposal's **Overview** tab is where team members with [the appropriate permissions](./configure-proposals#configure-permissions-and-approvals) can:
+- A proposal's **Overview** tab is where team members with [the appropriate permissions](../configuration#configure-permissions-and-approvals) can:
   - View and edit a proposal's description by clicking the pencil icon on the **README**.
   - Use the **Proposal activity** log to monitor changes over time and leave overall commentary.
   - View the proposal's status and author.
   - Select reviewers.
 - The [**Changes**](#changes) tab shows both a summary and detailed view of the schema changes that make up a proposal.
   - All viewers can also [provide commentary](#add-comments) on changes from the **Changes** tab.
-- The [**Checks**](./propose-changes#schema-checks) tab shows all [schema checks](./schema-checks) that have run for [saved revisions](./propose-changes#save-revisions).
+- The [**Checks**](./creation#schema-checks) tab shows all [schema checks](./schema-checks) that have run for [saved revisions](./creation#save-revisions).
 
 ### Changes
 
